--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
   "scripts": {
     "build": "SET NODE_ENV=production & webpack --config ./webpack.prod.config.js --progress --colors",
     "start": "node ./app.js"
-  }
+  },
+  "engines": {
+        "node": "7.0.0",
+        "npm": "3.10.8"
+    } 
 }
